# tb-embedding-quality

./: README.md  corpus_loader.py  embed_utils.py  local_model_io.py  main.py  pyproject.toml  requirements.txt  viz.py
